[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.2",
    "setuptools_scm",
]

[project]
authors = [
    { email = "tal@typesupply.com", name = "Tal Leming" },
    { name = "James Godfrey-Kittle" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Editors :: Vector-Based",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "booleanoperations==0.9.0",
    "cffsubr==0.3.0",
    "compreffor==0.5.6",
    "defcon==0.10.3",
    "fontmath==0.9.4",
    "fonttools[lxml,ufo]==4.60.0",
    "skia-pathops==0.8.0.post2",
    "ufolib2==0.18.1",
]
description = "A bridge between UFOs and FontTools."
dynamic = [
    "version",
]
license = "MIT"
license-files = [
    "LICENSE",
]
maintainers = [
    { email = "cosimo@anthrotype.com", name = "Cosimo Lupo" },
]
name = "ufo2ft"
requires-python = ">=3.9"

[project.optional-dependencies]
compreffor = [
    "compreffor>=0.5.6",
]
dev = [
    "black",
    "coverage",
    "flake8-bugbear",
    "isort",
    "pytest",
    "syrupy",
]
pathops = [
    "skia-pathops>=0.8.0",
]
test = [
    "pytest",
    "syrupy",
]

[project.readme]
content-type = "text/x-rst"
file = "README.rst"

[project.urls]
Homepage = "https://github.com/googlefonts/ufo2ft"

[tool.aliases]
test = "pytest"

[tool.pytest.ini_options]
addopts = "-r a"
filterwarnings = [
    "ignore:.*bytes:DeprecationWarning:fs.base",
    "ignore::DeprecationWarning:fs",
    "ignore::DeprecationWarning:pkg_resources",
    "ignore:fromstring:DeprecationWarning",
    "ignore:tostring:DeprecationWarning",
]
minversion = "2.8"
python_classes = [
    "*Test",
]
testpaths = [
    "tests",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "Lib"

[tool.setuptools.packages.find]
where = ["Lib"]
namespaces = false

[tool.setuptools_scm]

[tool.wheel]
universal = "1"
