[bumpversion]
current_version = 0.3.0
commit = True
tag = True
tag_name = v{new_version}

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[wheel]
universal = 1

[sdist]
formats = zip

[aliases]
test = pytest

[metadata]
license_file = LICENSE

[tool:pytest]
minversion = 2.8
testpaths = 
	tests
python_files = 
	*_test.py
python_classes = 
	*Test
addopts = 
	-v
	-r a
